update swagger docs for grade composition
